# 2023-2-JuizVirtual

./: .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  Procfile  README.md  app.json  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  test.yml
apps/contests/: __init__.py  admin.py  enums.py  models.py  tests.py  tests_contests.py  urls.py  views.py
apps/contests/migrations/: 0001_initial.py  0002_contest_cancelled.py
apps/problems/: __init__.py  admin.py  forms.py  models.py  tests.py  tests_problems.py  urls.py  views.py
apps/problems/migrations/: 0001_initial.py  0002_alter_problem_options_alter_problem_table.py  0003_problem_memory_limit_problem_score_and_more.py
apps/submissions/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/submissions/migrations/: 0001_initial.py  0002_alter_submission_code.py  0003_submission_status.py
apps/tasks/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_options_alter_task_table.py  0003_task_memory_limit_task_score_and_more.py  0004_task_input_file_task_output_file.py  0005_task_constraints.py
apps/users/: __init__.py  admin.py  forms.py  managers.py  models.py  tests.py  tests_users.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_score.py
config/: .env.example
core/: models.py
docker/django/: Dockerfile  entrypoint.sh
docs/: requirements.txt
docs/source/: architecture.rst  conf.py  index.rst  installation.rst
docs/source/scrum/: intro.rst
server/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
server/settings/: __init__.py  base.py  development.py  production.py
templates/: base.html
templates/contests/: detail.html  index.html
templates/pages/: home.html
templates/problems/: detail.html
templates/ranking/: list.html
templates/registration/: login.html  register.html
templates/submission/: submission_list.html
templates/submissions/: list.html  submission_list.html  submit.html
templates/tasks/: detail.html
templates/users/: profile.html
(+21 files in other folders)
